Button overlap fix.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -6,6 +6,7 @@
 .bulkActionButtons label input { margin-top: 2px; }
 .grid { @media (max-width: 767px) { min-height: 250px; } }
 .result {
+  margin-top: 11px;
   .checkbox { float: left; }
   .media,
   .media-body { overflow: visible; }
@@ -49,7 +50,7 @@
 
 .result.embedded {
   .title {
-    padding-left: 1.5rem;
+    margin-left: 1.5rem;
     border-left: 1px solid transparent;
   }
   .title.expanded {
